Update to 1.20.4 of crossplane. Switch to spring-grpc as the driver behind the spring-boot starter
Signed-off-by: Knut-Erik Johnsen <knut-erik.johnsen@klp.no>

--- a/crossplane-function-example/src/main/resources/application-dev.yaml
+++ b/crossplane-function-example/src/main/resources/application-dev.yaml
@@ -1,5 +1,7 @@
-grpc:
-  server:
-    security:
-      # For local testing we disable the security setting. This enables us to use the crossplane beta render functionality
-      enabled: false
+spring:
+  profiles:
+    active: development
+
+  grpc:
+    server:
+      port: 9443
