--- a/crossplane-function-example/src/main/resources/application-kubernetes.yaml
+++ b/crossplane-function-example/src/main/resources/application-kubernetes.yaml
@@ -1,13 +1,20 @@
-grpc:
-  server:
-    security:
-      # When runnin on kubernetes, crossplane expects a TLS endpoint to be presented, and
-      # injects the pod with the certificate and ca store to use. We just point to the mounted files
-      # in our config to be compliant.
-      # See also the ExampleFunctionApplication class, as we need to register bouncycastle as the provider for these
-      # certificates to work in Java
-      enabled: true
-      client-auth: optional
-      certificate-chain: file:///tls/server/tls.crt
-      private-key: file:///tls/server/tls.key
-      trust-cert-collection: file:///tls/server/ca.crt
+spring:
+  grpc:
+    server:
+      port: 9443
+      ssl:
+        bundle: grpcssl
+  # When runnin on kubernetes, crossplane expects a TLS endpoint to be presented, and
+  # injects the pod with the certificate and ca store to use. We just point to the mounted files
+  # in our config to be compliant.
+  ssl:
+    bundle:
+      pem:
+        grpcssl:
+          keystore:
+            certificate: /tls/server/tls.crt
+            private-key: /tls/server/tls.key
+          truststore:
+            certificate: /tls/server/ca.crt
+
+
