--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.3</version>
+        <version>4.0.0</version>
     </parent>
 
     <groupId>io.crossplane.compositefunctions</groupId>
@@ -18,31 +18,31 @@
     <description>Crossplane parent pom for composite functions</description>
 
     <properties>
-        <revision>1.0.0-SNAPSHOT</revision>
+        <revision>1.1.0-SNAPSHOT</revision>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.compiler.target>17</maven.compiler.target>
         <maven.compiler.source>17</maven.compiler.source>
 
         <!-- Dependency versions -->
-        <spring-boot.version>3.3.3</spring-boot.version>
-        <kubernetes-client.version>6.13.3</kubernetes-client.version>
-        <os-maven-plugin.version>1.7.1</os-maven-plugin.version>
-        <protobuf.version>3.25.5</protobuf.version>
-        <grpc.version>1.63.0</grpc.version>
-        <jakarta-annotation.version>1.3.5</jakarta-annotation.version>
-        <slf4j.version>2.0.13</slf4j.version>
-        <jackson-databind.version>2.17.1</jackson-databind.version>
+        <spring-boot.version>4.0.0</spring-boot.version>
+        <kubernetes-client.version>7.4.0</kubernetes-client.version>
+        <protobuf.version>3.25.8</protobuf.version>
+        <grpc.version>1.77.0</grpc.version>
+        <guava.version>33.4.8-jre</guava.version>
+        <!-- <jakarta-annotation.version>1.3.5</jakarta-annotation.version> -->
+        <slf4j.version>2.0.17</slf4j.version>
+        <jackson-databind.version>2.20.1</jackson-databind.version>
         <bouncycastle.version>1.77</bouncycastle.version>
-        <grpc-spring-boot-starter.version>3.1.0.RELEASE</grpc-spring-boot-starter.version>
+        <spring-boot-grpc-starter.version>1.0.0</spring-boot-grpc-starter.version>
 
         <!-- Plugin versions -->
-        <flatten-maven-plugin.version>1.6.0</flatten-maven-plugin.version>
-        <central-publishing-maven-plugin.version>0.4.0</central-publishing-maven-plugin.version>
-        <maven-source-plugin.version>3.3.1</maven-source-plugin.version>
-        <maven-javadoc-plugin.version>3.7.0</maven-javadoc-plugin.version>
-        <maven-gpg-plugin.version>3.2.4</maven-gpg-plugin.version>
-        <build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
+        <flatten-maven-plugin.version>1.7.3</flatten-maven-plugin.version>
+        <central-publishing-maven-plugin.version>0.9.0</central-publishing-maven-plugin.version>
+        <maven-source-plugin.version>3.4.0</maven-source-plugin.version>
+        <maven-javadoc-plugin.version>3.12.0</maven-javadoc-plugin.version>
+        <maven-gpg-plugin.version>3.2.8</maven-gpg-plugin.version>
+        <build-helper-maven-plugin.version>3.6.1</build-helper-maven-plugin.version>
     </properties>
 
     <modules>
@@ -98,6 +98,12 @@
                 <version>${protobuf.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>${guava.version}</version>
+            </dependency>
+
             <!-- Protobuf -->
             <dependency>
                 <groupId>io.grpc</groupId>
@@ -121,15 +127,19 @@
                 <artifactId>jackson-databind</artifactId>
                 <version>${jackson-databind.version}</version>
             </dependency>
+            <!--
             <dependency>
                 <groupId>org.bouncycastle</groupId>
                 <artifactId>bcpkix-jdk18on</artifactId>
                 <version>${bouncycastle.version}</version>
             </dependency>
+            -->
             <dependency>
-                <groupId>net.devh</groupId>
-                <artifactId>grpc-server-spring-boot-starter</artifactId>
-                <version>${grpc-spring-boot-starter.version}</version>
+                <groupId>org.springframework.grpc</groupId>
+                <artifactId>spring-grpc-dependencies</artifactId>
+                <version>${spring-boot-grpc-starter.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
