Add name to all poms for release
Signed-off-by: Knut-Erik Johnsen <knut-erik.johnsen@klp.no>

--- a/crossplane-crd-model/pom.xml
+++ b/crossplane-crd-model/pom.xml
@@ -11,6 +11,8 @@
 
     <artifactId>crossplane-crd-model</artifactId>
     <description>Crossplane coposite function CRDS</description>
+
+    <name>Crossplane CRD Models</name>
     <!-- DEPENDENCIES -->
     <dependencies>
         <dependency>
