--- a/crossplane-function-base/pom.xml
+++ b/crossplane-function-base/pom.xml
@@ -9,6 +9,7 @@
         <version>${revision}</version>
     </parent>
 
+    <name>Crossplane Function Base</name>
     <artifactId>crossplane-function-base</artifactId>
     <description>Crossplane base module for functions</description>
 
