--- a/crossplane-function-example/pom.xml
+++ b/crossplane-function-example/pom.xml
@@ -9,6 +9,7 @@
         <version>${revision}</version>
     </parent>
 
+    <name>Crossplane Function Example</name>
     <artifactId>crossplane-function-example</artifactId>
     <description>Crossplane example implementation of a function</description>
 
