--- a/crossplane-function-springboot-starter/pom.xml
+++ b/crossplane-function-springboot-starter/pom.xml
@@ -9,6 +9,7 @@
         <version>${revision}</version>
     </parent>
 
+    <name>Crossplane SprintBoot Starter</name>
     <artifactId>crossplane-function-springboot-starter</artifactId>
 
 
