--- a/provider-models/crossplane-provider-upjet-azure/pom.xml
+++ b/provider-models/crossplane-provider-upjet-azure/pom.xml
@@ -9,6 +9,7 @@
         <version>1.20-alpha</version>
     </parent>
 
+    <name>Crossplane Provider Azure</name>
     <artifactId>crossplane-provider-upjet-azure-model</artifactId>
     <description>Crossplane models for the Azure upjet based provider</description>
 
