--- a/provider-models/crossplane-provider-upjet-azuread/pom.xml
+++ b/provider-models/crossplane-provider-upjet-azuread/pom.xml
@@ -9,6 +9,7 @@
         <version>1.20-alpha</version>
     </parent>
 
+    <name>Crossplane Provider AzureAD</name>
     <artifactId>crossplane-provider-upjet-azuread-model</artifactId>
     <description>Crossplane models for the Azure AD upjet based provider</description>
 
