--- a/provider-models/crossplane-provider-upjet-github/pom.xml
+++ b/provider-models/crossplane-provider-upjet-github/pom.xml
@@ -6,9 +6,10 @@
     <parent>
         <groupId>io.crossplane.providers</groupId>
         <artifactId>crossplane-providers-parent</artifactId>
-        <version>1.18.0-charlie</version>
+        <version>1.20-alpha</version>
     </parent>
 
+    <name>Crossplane Provider GitHub</name>
     <artifactId>crossplane-provider-upjet-github-model</artifactId>
     <description>Crossplane models for the Github provider</description>
 
