--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -19,6 +19,11 @@ on:
           - provider-upjet-github
           - provider-terraform
           - provider-kubernetes
+      family:
+        type: boolean
+        description: 'Whether to release all crds as a family. False creates individual releases for each family.'
+        required: true
+        default: true
 
 
 jobs:
@@ -37,25 +42,15 @@ jobs:
           server-password: MAVEN_CENTRAL_TOKEN # env variable for token in deploy
           gpg-private-key: ${{ secrets.MAVEN_GPG_PRIVATE_KEY }} # Value of the GPG private key to import
           gpg-passphrase: MAVEN_GPG_PASSPHRASE # env variable for GPG private key passphrase
-      - name: Fetch crds
+      - name: Fetch and build crds
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}/src/main/resources/kubernetes"
-        run : ./fetch.sh "${{ github.event.inputs.releaseversion }}"
-      - name: List crds
-        working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}/src/main/resources/kubernetes"
-        run : ls
-      - name: Set the revision property
-        working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}"
-        run: mvn versions:set-property -Dproperty=modelrevision "-DnewVersion=${{ github.event.inputs.releaseversion }}" -DgenerateBackupPoms=false
-      - name: Build with Maven
-        working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}"
-        run: mvn -B deploy --file pom.xml -Pdeploy
-        env:
           MAVEN_CENTRAL_USERNAME: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           MAVEN_CENTRAL_TOKEN: ${{ secrets.MAVEN_CENTRAL_TOKEN }}
           MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
           MAVEN_OPTS: "-Xmx2048m"
+        working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}"
+        run : ./fetchAndBuild.sh "${{ github.event.inputs.releaseversion }}"
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
