--- a/provider-models/crossplane-provider-upjet-azure/pom.xml
+++ b/provider-models/crossplane-provider-upjet-azure/pom.xml
@@ -10,13 +10,15 @@
     </parent>
 
     <name>Crossplane Provider Azure</name>
-    <artifactId>crossplane-provider-upjet-azure-model</artifactId>
+    <artifactId>crossplane-provider-upjet-azure-model-${modelGroup}</artifactId>
     <description>Crossplane models for the Azure upjet based provider</description>
 
 
     <version>${modelrevision}</version>
     <properties>
         <modelrevision>1.0.0-SNAPSHOT</modelrevision>
+        <modelDirectory/>
+        <modelGroup>family</modelGroup>
     </properties>
 
     <!-- DEPENDENCIES -->
@@ -46,7 +48,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>src/main/resources/kubernetes</source>
+                    <source>src/main/resources/kubernetes${modelDirectory}</source>
                 </configuration>
             </plugin>
         </plugins>
