--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -21,7 +21,7 @@ on:
           - provider-kubernetes
       family:
         type: boolean
-        description: 'Whether to release all crds as a family. False creates individual releases for each family.'
+        description: 'If true, we download into groups of crds and release both as family and as groups. False just allInOne.'
         required: true
         default: true
 
@@ -50,7 +50,7 @@ jobs:
           MAVEN_GPG_PASSPHRASE: ${{ secrets.MAVEN_GPG_PASSPHRASE }}
           MAVEN_OPTS: "-Xmx2048m"
         working-directory: "./provider-models/crossplane-${{ github.event.inputs.provider }}"
-        run : ./fetchAndBuild.sh "${{ github.event.inputs.releaseversion }}"
+        run : ./fetchAndBuild.sh "${{ github.event.inputs.releaseversion }}" "${{ github.event.inputs.family }}"
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
